<resources>
    <string name="app_name">Positive News</string>
    <string name="app_version">version #%s</string>
    <string name="news_database_name">news_database</string>

    <!--    Snackbars-->
    <string name="snackbar_no_connection">No connection is available. Please try again later.</string>
    <string name="snackbar_bookmark_added">Bookmark added.</string>
    <string name="snackbar_bookmark_removed">Bookmark removed.</string>
    <string name="snackbar_news_source_blocked">News source blocked.</string>
    <string name="snackbar_news_source_unblocked">News source unblocked.</string>

    <!--    Bottom Navigation tab names-->
    <string name="bottom_navigation_tab_hot">HOT</string>
    <string name="bottom_navigation_tab_new">NEW</string>
    <string name="bottom_navigation_tab_saved">SAVED</string>
    <string name="bottom_navigation_tab_blocked">BLOCKED</string>

    <!--    Content description-->
    <string name="content_description_icon_more">More</string>
    <string name="content_description_news_thumbnail">News thumbnail</string>

    <!--    MoreOptionsBottomFragment-->
    <string name="more_options_share_button">Share</string>
    <string name="more_options_bookmark_inactive_button">Add bookmark</string>
    <string name="more_options_bookmark_active_button">Delete bookmark</string>

    <!--    BookmarkListFragment-->
    <string name="remove_all_bookmarks">Clear bookmarks</string>
    <string name="bookmarks_placeholder_text">You have no bookmarks yet.</string>

    <!--    WebFragment-->
    <string name="remove_ads">Remove ads</string>
    <string name="block_news_source">Block source</string>
    <string name="loading_error">Could not load page.</string>

    <!--    SettingsFragment-->
    <string name="day_mode">Day mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="data_policy">Data policy</string>
    <string name="bug_report">Report a bug</string>
    <string name="share_app">Spread some positivity.</string>

    <!--    BlockedSources-->
    <string name="blocked_sources">Blocked sources</string>
    <string name="blocked_news_placeholder_text">No blocked sources yet.</string>

</resources>
